bonus/confs/dnsconfig.yml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-mashad-ma
  annotations:
    external-dns.alpha.kubernetes.io/hostname: gitlab.mashad.ma.
spec:
  type: ExternalName
  externalName: 172.26.0.2
